--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,13 @@
       @apply bg-background text-foreground;
     }
   }
+
+
+  .glass-container {
+    position: relative;
+  }
+  
+  .glass-container::before {
+    @apply absolute -inset-[10px] -z-10 rounded-xl border border-slate-100/20 bg-slate-200/10 backdrop-blur-md;
+    content: "";
+  }
